# hindsight

./: .gitignore  Cargo.toml  PLAN.md  PLAN2.md  README.md  UNIFIED_PLAN.md
.github/workflows/: ci.yml
crates/hindsight/: Cargo.toml
crates/hindsight-protocol/: Cargo.toml
crates/hindsight-protocol/src/: events.rs  lib.rs  service.rs  span.rs  trace_context.rs
crates/hindsight-server/: Cargo.toml
crates/hindsight-server/src/: lib.rs  main.rs  seed_data.rs  service_impl.rs  storage.rs
crates/hindsight-server/src/ui/: app.html  app.js  index.html  rapace.js
crates/hindsight-tui/src/: main.rs
crates/hindsight-wasm/: Cargo.toml
crates/hindsight-wasm/src/: components.rs  lib.rs
crates/hindsight-wasm/src/components/: trace_detail.rs
crates/hindsight/src/: lib.rs  span_builder.rs  tracer.rs
crates/hindsight/tests/: http_upgrade.rs
docs/archive/: PLAN_v1.md  PLAN_v2_picante.md
