[package]
name = "hindsight-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Protocol definitions for Hindsight distributed tracing"

[dependencies]
facet.workspace = true
rapace.workspace = true

serde.workspace = true
serde_json.workspace = true
time.workspace = true
thiserror.workspace = true
getrandom.workspace = true
hex.workspace = true
