[package]
name = "hindsight-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Standalone server for collecting and visualizing distributed traces"

[[bin]]
name = "hindsight"
path = "src/main.rs"

[dependencies]
hindsight-protocol = { path = "../hindsight-protocol" }

tokio.workspace = true
tokio-util.workspace = true

# HTTP/WebSocket server
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
hyper.workspace = true

serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true

# CLI
clap.workspace = true

# Tracing (self-instrumentation)
tracing.workspace = true
tracing-subscriber.workspace = true

# Storage
dashmap.workspace = true
parking_lot.workspace = true

time.workspace = true
