[package]
name = "hindsight-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Standalone server for collecting and visualizing distributed traces"

[[bin]]
name = "hindsight"
path = "src/main.rs"

[dependencies]
hindsight-protocol = { path = "../hindsight-protocol" }
rapace.workspace = true

tokio.workspace = true
async-stream = "0.3"
tokio-tungstenite = "0.26"

# HTTP server (only for serving static HTML)
axum.workspace = true

# CLI
clap.workspace = true

# Tracing (self-instrumentation - NOT sent to Hindsight!)
tracing.workspace = true
tracing-subscriber.workspace = true

# Storage
dashmap.workspace = true
parking_lot.workspace = true

# Utilities
thiserror.workspace = true
anyhow.workspace = true
